--- a/packages/client/src/styles/global.css
+++ b/packages/client/src/styles/global.css
@@ -14,6 +14,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  height: 100dvh;
+  height: 100vh;
+}
+
 .loading {
   display: flex;
   justify-content: center;
